--- a/projects/28-jsProjects/0-fiftyProjects/35-scroll.html
+++ b/projects/28-jsProjects/0-fiftyProjects/35-scroll.html
@@ -26,7 +26,7 @@
 
 <body>
   <!-- Started at 3:52/12.12.2020 -->
-  <!-- coded for 60 minute(s) -->
+  <!-- coded for 2 hour(s) -->
   <div>
     <input type="number" value="10">
     <div class="output"></div>
@@ -46,6 +46,7 @@
     /* 
       1. select btn, cEle, sEle, input, output
       2. add window.onload = setupScroll eventlistener 
+      2. set a global variable called scroller and set it to true
       3. setup a function called "setupScroll"
         - set sEle innerHTML equal to content
         - select a variable called temp  = sEle.getBoundingClientRect();
@@ -56,14 +57,21 @@
         - set sEle's top to temp.height + "px"
         - set scrollint to setInterval with "scorillingEle" para, 50s
       4. function scrollingEle()
-        - var scrollSpeed at 10
-        - var posY to parseInt w/ sEle.style.top as a argument
-        - CLO use sElement top in parseInt as a argument to turn 10px into 10 (w/o px)
-        - if posY plus sElement's clientHeight is greater than 0...
-          - set sElement's top equal to posY minus scrollSpeed plus "px"
-          else
-          - set sElement's top equal to cElem's clientHeight plus "px"
+        - if scroller is true...
+          - var scrollSpeed at 10
+          - var posY to parseInt w/ sEle.style.top as a argument
+          - CLO use sElement top in parseInt as a argument to turn 10px into 10 (w/o px)
+          - if posY plus sElement's clientHeight is greater than 0...
+            - set sElement's top equal to posY minus scrollSpeed plus "px"
+            else
+            - set sElement's top equal to cElem's clientHeight plus "px"
         - update innerHTML of output with "Scroll speed" plus scrollSpeed plus " Y position" plus posY;
+      5. addEventlistener to cEle with mouseenter event & scrollSpeed func
+      6. addEventlistener to cEle with mouseleave event & scrollSpeed func
+      7. scrollSpeed(e) func
+        - CLO e.type variable where e is the element that triggers the event
+        - set scroller equal to ternary operator where e.type = "mouseenter" ? false : true
+
     */
     window.onload = setupScroll;
     btn.addEventListener('click', () => {
@@ -73,7 +81,6 @@
     function setupScroll() {
       sElement.innerHTML = content;
       let temp = sElement.getBoundingClientRect();
-      console.log(temp);
       cElement.style.height = (temp.height / 2) + "px";
       sElement.style.top = temp.height + "px";
       scrollInt = setInterval(scrollingEle, 50);
@@ -81,14 +88,12 @@
     function scrollingEle() {
       let scrollSpeed = 10;
       let posY = parseInt(sElement.style.top);
-      // console.log(parseInt(posY));
       if (posY + sElement.clientHeight > 0) {
         sElement.style.top = posY - scrollSpeed + "px";
       } else {
         sElement.style.top = cElement.clientHeight + "px";
       }
       output.innerHTML = `Scroll speed ${scrollSpeed} Y position ${posY}`;
-
     }
   </script>
 </body>
